Fix collapsed sidebar, bump width down

--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -8,7 +8,7 @@
   background: $grey-lightest;
   box-shadow: 0 -1px 4px $grey-darkest;
   font-size: 14px;
-  min-width: 250px;
+  min-width: 240px;
   transition: 0.5s ease-in-out;
   padding-bottom: 8px;
 
